fix : SonarLint error